<resources>
    <string name="app_name">Inventory Mini</string>
    <string name="app_simple_name">inventory_mini</string>
    <string name="title_activity_list_product">Produk Terbaru</string>
    <string name="app_id">ca-app-pub-2945984116276231~4249365577</string>
    <string name="list_product_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="create_product_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="view_product_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="navigation_drawer_open">Buka navigation drawer</string>
    <string name="navigation_drawer_close">Tutup navigation drawer</string>
    <string name="action_settings">Pengaturan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="ok">Oke</string>
    <string name="cancels">Batal</string>
    <string name="product_name">Nama</string>
    <string name="product_image">Gambar</string>
    <string name="product_quantity">Jumlah</string>
    <string name="product_category">Kategori</string>
    <string name="product_summary">Ringkasan</string>
    <string name="product_brand">Merek</string>
    <string name="product_weight">Berat</string>
    <string name="product_location">Lokasi</string>
    <string name="product_date_created">Tanggal dibuat</string>
    <string name="product_date_modified">Tanggal diubah</string>
    <string name="create_category">Tambahkan</string>
    <string name="product_qty_wacth">Tambah pengingat saat jumlah produk dibawah</string>
    <string name="add_new">Tambahkan</string>
    <string name="add_new_image">Unggah Gambar</string>
    <string name="select_image">Pilih Gambar</string>
    <string name="product_category_id">Id Kategori</string>
    <string name="select_cat">Pilih kategori</string>
    <string name="select_location">Pilih lokasi</string>
    <string name="product_desc">Deskripsi</string>
    <string name="product_qty">Jumlah</string>
    <string name="product_created">Tanggal dibuat</string>
    <string name="product_updated">Tanggal diubah</string>
    <string name="product_price">Harga</string>
    <string name="product_price_sale">Harga Diskon</string>
    <string name="product_price_bulk">Harga Grosir</string>
    <string name="min_price">Harga minimum</string>
    <string name="max_price">Harga maksimum</string>
    <string name="min_qty">Jumlah minimum</string>
    <string name="max_qty">Jumlah maksimum</string>
    <string name="other_category">Lainnya</string>
    <string name="other_location">Lainnya</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="about_us">Tentang Kami</string>
    <string name="product_variation">Variasi Produk</string>
    <string name="total_quantity">Kuantitas Total</string>
    <string name="total_amount">Jumlah Total</string>
    <string name="most_used_brand">Merek Terpopuler</string>
    <string name="most_used_category">Kategori Terpopuler</string>
    <string name="most_used_location">Lokasi Terpopuler</string>
    <string name="sort_date_desc">Produk terbaru</string>
    <string name="sort_date_asc">Produk terlama</string>
    <string name="sort_price_desc">Harga termahal</string>
    <string name="sort_price_asc">Harga termurah</string>
    <string name="sort_name_desc">Nama terakhir</string>
    <string name="sort_name_asc">Nama terawal</string>
    <string name="sort_qty_desc">Jumlah terbanyak</string>
    <string name="sort_qty_asc">Jumlah Terendah</string>
    <string name="msg_category_created">Kategori dibuat</string>
    <string name="msg_category_error">Form kategori harus diisi</string>
    <string name="msg_product_created">Produk berhasil dibuat</string>
    <string name="msg_product_updated">Produk berhasil diperbarui</string>
    <string name="msg_location_created">Lokasi berhasil dibuat</string>
    <string name="msg_location_error">Form lokasi harus diisi</string>
    <string name="msg_product_form_error">Form harus diisi</string>
    <string name="msg_product_qty_error">Jumlah produk harus disi</string>
    <string name="msg_product_cat_error">Kategori produk harus disi</string>
    <string name="msg_product_location_error">Lokasi produk harus disi</string>
    <string name="msg_product_name_error">Nama produk harus disi</string>
    <string name="msg_product_price_error">Harga produk harus disi</string>
    <string name="msg_only_json_error">Hanya menerima file berekstensi .json</string>
    <string name="translate_false_table_product" translatable="false">Product</string>
    <string name="translate_false_table_category" translatable="false">Category</string>
    <string name="translate_false_table_location" translatable="false">Location</string>
    <string name="low_stock_desc">Stok produk hampir habis. Segera cek dan perbarui stok produk berikut.</string>
    <string name="check_low_stock">Cek produk</string>
    <string name="desc_backup">Gunakan tombol Backup data ke File untuk mengimpor seluruh database ke format JSON,
        yang nantinya bisa diubah diluar aplikasi. Tombol Backup Database digunakan untuk melaukan Backup lokal.
        Tombol Hapus seluruh Database akan menghapus seluruh data Barang dari Aplikasi.</string>
    <string name="desc_restore">Untuk mengakses file backup, silahkan tekan tombol Restore data dari File. Lalu buka direktori Download > InventoryMini.
    Silahkan pilih data yang ingin anda Restore. Pastikan anda tidak mengubah nama dari file backup untuk menghindari kegagalan pengembalian data.</string>
    <string name="action_new_product">Tambah produk</string>
    <string name="action_delete_all_product">Hapus semua produk</string>
    <string name="question_delete_all_product">Anda yakin ingin menghapus seluruh Data?</string>
    <string name="question_delete_single_product">Anda yakin ingin menghapus Produk?</string>
    <string name="editing_product">Memperbarui Produk</string>
    <string name="action_search">Mencari </string>
    <string name="action_filter">Filter Produk</string>
    <string name="action_sort">Sort Produk</string>
    <string name="backup_data">Backup data ke File</string>
    <string name="backup_data_realm">Backup Database</string>
    <string name="restore_data">Restore data dari File</string>
    <string name="restore_data_realm">Restore Database</string>
    <string name="backup_created">Backup berhasil dibuat. Cek backup file di folder Download/InventoryMini</string>
    <string name="delete_all">Hapus seluruh Database</string>
    <string name="bar_title_create_cat">Tambah Kategori</string>
    <string name="bar_title_create_product">Buat Produk</string>
    <string name="bar_title_create_location">Buat Lokasi</string>
    <string name="bar_title_login">Login</string>
    <string name="bar_title_register_store">Daftar Toko</string>
    <string name="bar_title_register_user">Daftarkan User</string>
    <string name="bar_title_latest_product">Produk Terbaru</string>
    <string name="low_stock_title">Jumlah stok produk rendah</string>
    <string name="store_overview_title">Ringkasan toko</string>
    <string name="translate_false_currency_symbol" translatable="false">Rp</string>
    <string name="translate_false_currency_grouping_sep" translatable="false">.</string>
    <string name="translate_false_currency_decimal_sep" translatable="false">,</string>
    <string name="product_qty_symbol">buah</string>
    <string name="translate_false_productId" translatable="false">productId</string>
    <string name="translate_false_about_html" translatable="false">
        <![CDATA[
           <h1>Inventory Mini 1.3</h1>

            <span>&copy; Copyright 2018 <a href="http://septianfujianto.com/">Septian Ahmad Fujianto </a>
            <span>Inventory Mini is licensed under the GPL v2 or later <a href="http://www.gnu.org/licenses/gpl-2.0.html">http://www.gnu.org/licenses/gpl-2.0.html</a></span>

            <br />
            <h2>Credits</h2>

            <h3>Android SDK</h3>
            <p>Licensed under Apache Software License, Version 2.0 by Google</p>
            <br />

            <h3>Google GSON</h3>
            <p>Licensed under Apache Software License, Version 2.0 by Google</p>
            <br />

            <h3>Realm Java</h3>
            <p>Licensed under Apache Software License, Version 2.0 by Realm.io</p>
            <br />

            <h3>Android Iconify</h3>
            <p>Licensed under Apache Software License, Version 2.0 by Joan Zapata</p>
            <br />

            <h3>FontAwesome</h3>
            <p>SIL OPEN FONT LICENSE Version, 1.1 by Dave Gandy</p>
            <br />

            <h3>Stetho</h3>
            <p>Licensed under BSD License, Version 2.0 by Facebook, Inc</p>
            <br />

            <h3>Stetho Realm</h3>
            <p>Licensed under BSD License, Version 2.0 by uPhyca, Inc</p>
            <br />

            <h3>Recovery</h3>
            <p>Licensed under Apache Software License, Version 2.0 by zhengxiaoyong</p>
            <br />

            <h3>Butter Knife</h3>
            <p>Licensed under Apache Software License, Version 2.0 by Jack Wharton</p>
            <br />

            <h3>ImagePicker</h3>
            <p>Licensed under Apache Software License, Version 2.0 by Mario Velasco Casquero</p>
            <br />

            <h3>MaterialFilePicker</h3>
            <p>Licensed under Apache Software License, Version 2.0 by nbsp team</p>
            <br />

            <h3>Android Job</h3>
            <p>Licensed under Apache Software License, Version 2.0 by Evernote</p>
            <br />
        ]]>
    </string>
    <string name="title_activity_settings">Pengaturan</string>
    <string name="pref_header_general">Umum</string>
    <string name="pref_title_display_name">Nama pemilik</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_owner_email">Email pemilik</string>
    <string name="pref_default_owner_email" translatable="false">admin@inventorymini.com</string>
    <string name="pref_title_store_name">Nama Toko</string>
    <string name="pref_default_store_name" translatable="false">Mini Shop</string>
    <string name="pref_title_store_address">Alamat Toko</string>
    <string name="pref_default_store_address" translatable="false">Jl. Toko no. 5</string>
    <string name="pref_title_currency_symbol">Simbol mata uang</string>
    <string-array name="pref_currency_symbol" translatable="false">
        <item>Rp</item>
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>¥</item>
        <item>₱</item>
    </string-array>
    <string name="pref_title_decimal_sep">Pemisah desimal</string>
    <string name="pref_title_grouping_sep">Pemisah ribuan</string>
    <string name="pref_header_data_sync">Data &amp; notifikasi</string>
    <string name="pref_title_sync_frequency">Frekuensi notifikasi</string>
    <string name="one_minute">1 menit</string>
    <string name="fivteen_minutes">15 menit</string>
    <string name="thirty_minutes">30 menit</string>
    <string name="one_hour">1 jam</string>
    <string name="three_hour">3 jam</string>
    <string name="six_hour">6 jam</string>
    <string name="twelve_hour">12 jam</string>
    <string name="twentyfour_hour">24 jam</string>
    <string-array name="pref_sync_frequency_titles">
        <item>@string/fivteen_minutes</item>
        <item>@string/thirty_minutes</item>
        <item>@string/one_hour</item>
        <item>@string/three_hour</item>
        <item>@string/six_hour</item>
        <item>@string/twelve_hour</item>
        <item>@string/twentyfour_hour</item>
    </string-array>
    <string name="reset">Reset</string>
    <string name="finish">Selesai</string>
</resources>