<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/product_category" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/product_location" />
        <item
            android:id="@+id/nav_import"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/backup_restore" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about_us" />
    </group>

</menu>
