<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet"
    android:clipToPadding="true"
    android:padding="10sp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:text="Sort"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radGroupSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_date_desc"
                android:id="@+id/sortDateDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_date_asc"
                android:id="@+id/sortDateAsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_price_desc"
                android:id="@+id/sortPriceDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_price_asc"
                android:id="@+id/sortPriceAsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_name_desc"
                android:id="@+id/sortNameDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_name_asc"
                android:id="@+id/sortnameAsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_qty_desc"
                android:id="@+id/sortQtyDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/colorAccent"
                android:paddingLeft="10dp"
                android:text="@string/sort_qty_asc"
                android:id="@+id/sortQtyAsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnReset"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/reset"
                android:layout_weight=".50"
                android:layout_width="0sp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSort"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/finish"
                android:layout_weight=".50"
                android:layout_width="0sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>