<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/action_filter"
        app:showAsAction="always" />

    <item xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_sort"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_action_mic"
        android:id="@+id/action_new_product"
        android:orderInCategory="100"
        android:title="@string/action_new_product"
        app:showAsAction="never" />
</menu>
