<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/desc_backup"
        android:layout_marginBottom="20sp"
        android:id="@+id/backupDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginBottom="10sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/btnBackup"
        android:text="@string/backup_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<Button-->
        <!--android:layout_marginBottom="10sp"-->
        <!--style="@style/Widget.AppCompat.Button.Colored"-->
        <!--android:background="#FF4DB6AC"-->
        <!--android:id="@+id/btnBackupRealm"-->
        <!--android:text="@string/backup_data_realm"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_red_dark"
        android:id="@+id/btnDeleteAll"
        android:text="@string/delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>